--- a/client/package.json
+++ b/client/package.json
@@ -1,55 +1,67 @@
 {
   "name": "land-game-client",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "Land game client",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "start": "vite preview",
+    "dev": "npm run build:nextconfig; DEV=true node scripts/esbuild.server.js",
+    "build": "npm run build:nextconfig; next build; node scripts/esbuild.server.js",
+    "build:nextconfig": "node scripts/esbuild.nextconfig.js",
+    "server": "NODE_ENV=production node dist/server/index.js",
+    "lint": "eslint --ext .ts --ext .tsx src/",
+    "analyze": "BUNDLE_ANALYZE=both npm run build",
+    "typecheck": "tsc --noEmit",
     "postinstall": "npx patch-package"
   },
+  "author": "Sander Vispoel",
+  "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "1.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "express": "4.17.1",
+    "lodash": "4.17.21",
+    "next": "10.2.0",
+    "next-redux-wrapper": "6.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "7.2.4",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
     "redux": "4.1.0",
-    "redux-thunk": "2.3.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "5.2.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
+    "@babel/plugin-proposal-export-default-from": "7.12.13",
+    "@next/bundle-analyzer": "10.2.0",
+    "@svgr/webpack": "5.5.0",
+    "@types/copy-webpack-plugin": "8.0.0",
+    "@types/express": "4.17.11",
+    "@types/lodash": "4.14.168",
+    "@types/node": "15.0.1",
+    "@types/react": "17.0.4",
+    "@types/react-dom": "17.0.3",
     "@types/react-redux": "7.1.16",
-    "@types/react-router": "5.1.13",
-    "@types/react-router-dom": "5.1.7",
+    "@types/redux": "3.6.31",
     "@types/styled-components": "5.1.9",
+    "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
-    "@vitejs/plugin-legacy": "1.3.2",
-    "@vitejs/plugin-react-refresh": "^1.3.3",
+    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-styled-components": "1.12.0",
+    "chokidar": "3.5.1",
+    "copy-webpack-plugin": "8.1.1",
+    "esbuild": "0.11.16",
     "eslint": "7.25.0",
     "eslint-config-react-app": "6.0.0",
+    "eslint-import-resolver-babel-module": "5.3.1",
     "eslint-plugin-flowtype": "5.7.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "stylelint": "13.13.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.3",
-    "vite-plugin-html": "2.0.7",
-    "vite-plugin-svgr": "0.2.0",
-    "vite-tsconfig-paths": "3.3.9"
-  },
-  "description": "Repository of react-vite.",
-  "author": "Label A [labela.nl]",
-  "keywords": [],
-  "repository": {
-    "url": ""
+    "file-loader": "6.2.0",
+    "next-offline": "5.0.5",
+    "ts-toolbelt": "9.6.0",
+    "tsconfig-paths-webpack-plugin": "3.5.1",
+    "typesafe-actions": "5.1.0",
+    "typescript": "4.2.4",
+    "url-loader": "4.1.1",
+    "webpack": "5.36.1"
   }
 }
