--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,33 +1,60 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "sourceMap": true,
+    "pretty": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "baseUrl": "src",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noImplicitAny": false,
+    "allowJs": false,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "target": "esnext",
+    "module": "esnext",
+    "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
-      "common/*": ["components/common/*"],
-      "slices/*": ["state/slices/*"],
-      "hooks": ["services/hooks/index"],
-      "images/*": ["static/images/*"],
-      "modules/*": ["components/modules/*"],
-      "pages/*": ["components/pages/*"],
-      "vectors/*": ["static/vectors/*"],
-      "services/*": ["services/*"],
-      "styles/*": ["styles/*"],
-      "types": ["types/index"]
-    }
+      "config": ["config/index"],
+      "ducks": ["src/ducks/index"],
+      "ducks/*": ["src/ducks/*"],
+      "modules": ["src/components/modules/index"],
+      "modules/*": ["src/components/modules/*"],
+      "common": ["src/components/common/index"],
+      "common/*": ["src/components/common/*"],
+      "hooks": ["src/hooks/index"],
+      "hooks/*": ["src/hooks/*"],
+      "images/*": ["src/static/images/*"],
+      "router": ["server/router"],
+      "server/*": ["server/*"],
+      "styles": ["src/styles/index"],
+      "styles/*": ["src/styles/*"],
+      "services": ["src/services"],
+      "services/*": ["src/services/*"],
+      "store": ["src/store"],
+      "types": ["src/types/index"],
+      "vectors/*": ["src/static/vectors/*"]
+    },
+    "lib": [
+      "dom",
+      "esnext"
+    ],
   },
-  "include": ["./src"]
+  "typeRoots": [
+    "node_modules/@types"
+  ],
+  "exclude": [
+    "dist",
+    ".next",
+    "out",
+    "next.config.js",
+    "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
