--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -4,6 +4,7 @@
 
 [context.production.environment]
   NEXT_SERVERLESS = "true"
+  NODE_ENV = "production"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
