--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -4,7 +4,7 @@
 
 [context.production.environment]
   NEXT_SERVERLESS = "true"
-  NODE_ENV = "production"
+  APP_ENV = "production"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
