--- a/client/package.json
+++ b/client/package.json
@@ -15,18 +15,14 @@
     "server": "next start",
     "lint": "eslint --ext .ts --ext .tsx src/",
     "analyze": "BUNDLE_ANALYZE=both npm run build",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "npx patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookstate/core": "3.0.7",
     "lodash": "4.17.21",
     "next": "10.2.0",
-    "next-redux-wrapper": "6.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.4",
-    "redux": "4.1.0",
-    "redux-thunk": "^2.3.0",
     "styled-components": "5.2.3",
     "typesafe-actions": "5.1.0"
   },
@@ -40,8 +36,6 @@
     "@types/node": "15.0.1",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
-    "@types/react-redux": "7.1.16",
-    "@types/redux": "3.6.31",
     "@types/styled-components": "5.1.9",
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
