--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "server": "next start",
     "lint": "eslint --ext .ts --ext .tsx src/",
     "analyze": "BUNDLE_ANALYZE=both npm run build",
-    "typecheck": "tsc --noEmit"
+    "tc": "tsc --noEmit"
   },
   "dependencies": {
     "@hookstate/core": "3.0.7",
+    "antd": "4.16.0",
     "lodash": "4.17.21",
     "next": "10.2.0",
     "react": "17.0.2",
@@ -40,6 +41,7 @@
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
+    "babel-plugin-import": "1.13.3",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-styled-components": "1.12.0",
     "chokidar": "3.5.1",
@@ -55,6 +57,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "6.2.0",
     "next-offline": "5.0.5",
+    "next-plugin-antd-less": "1.2.1",
     "ts-toolbelt": "9.6.0",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.2.4",
