--- a/client-backend/tsconfig.json
+++ b/client-backend/tsconfig.json
@@ -13,6 +13,7 @@
     "strict": true,
     "sourceMap": true,
     "incremental": true,
+    "strictPropertyInitialization": false,
     "outDir": "./dist",
     "baseUrl": "src",
     "paths": {
