Add shared types folder

--- a/client-backend/tsconfig.json
+++ b/client-backend/tsconfig.json
@@ -15,10 +15,12 @@
     "incremental": true,
     "strictPropertyInitialization": false,
     "outDir": "./dist",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "entities/*": ["entities/*"],
-      "modules/*": ["modules/*"]
+      "entities": ["src/entities/index"],
+      "entities/*": ["src/entities/*"],
+      "modules/*": ["src/modules/*"],
+      "bcc-sim/types": ["../types/index"]
     }
   }
 }
